fix: заменить List.of на Java 8-совместимые вызовы в BackgroundDetailApiTest